# automated-pycalver-versioning

./: README.md  pyproject.toml
.github/workflows/: main.yml
spike/: __init__.py
tests/: test_spike.py
