[tool.poetry]
name = "automated-pycalver-versioning"
version = "0.1.0"
description = "Spike project to work out automated pycalver versioning"
authors = ["khanguslee <khanguslee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
