[tool.poetry]
name = "automated-pycalver-versioning"
version = "202007.3"
description = "Spike project to work out automated pycalver versioning"
authors = ["khanguslee <khanguslee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pycalver = "^202005.35"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[pycalver]
current_version = "v202007.0003"
version_pattern = "{pycalver}"
commit = true
tag = true
push = true

[pycalver.file_patterns]
"pyproject.toml" = [
    '"{pycalver}"',
    '"{pep440_version}"'
]
"README.md" = [
    '[Version {pep440_version}]',
    'img.shields.io/static/v1.svg?label=version&message={pep440_version}&color=blue'
]
"spike/__init__.py" = [
    '__version__ = "{pep440_version}"'
]
"tests/test_spike.py" = [
    '__version__ == "{pep440_version}"'
]
